# egret

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.json
src/: client.rs  config.rs  main.rs
